--- a/input.css
+++ b/input.css
@@ -5,3 +5,11 @@
 *{
     box-sizing: border-box;
 }
+
+body{
+    font-family: "Inter",sans-serif; 
+}
+
+.card{
+    @apply border border-gray-100 bg-gradient-to-tl from-white/5 to-white/10 transition-all duration-300 ease-out translate-y-0 shadow-none hover:-translate-y-1.5 hover:shadow-xl
+}
