--- a/input.css
+++ b/input.css
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+
+html{
+    scrollbar-width: thin;
+}
+
 body{
     font-family: "Inter",sans-serif; 
 }
@@ -13,3 +18,8 @@ body{
 .card{
     @apply border border-gray-100 bg-gradient-to-tl from-white/5 to-white/10 transition-all duration-300 ease-out translate-y-0 shadow-none hover:-translate-y-1.5 hover:shadow-xl
 }
+
+#error-modal::backdrop{
+    @apply backdrop-blur-sm bg-black/40
+}
+
